NLopt 2.1.2 (8 July 2010)

* The Python mconstraint (vector-valued constraint) functions
  now pass a 2-dimensional array for the gradient argument, rather
  than a flattened 1d array.

* Return an NLOPT_INVALID_ARGS error if more than n equality constraints
  are added in an n-dimensional problem.

* Fix bug that could cause spurious NLOPT_INVALID_ARGS errors when
  adding constraints under rare circumstances.

* Eliminate a few small memory leaks that could occur under error conditions.

NLopt 2.1.1 (7 July 2010)

* More robust configure check for Python include directories, via
  distutils.sysconfig.get_python_inc() and numpy.get_include().
  Thanks to Nathaniel Smith for the tip.

* Bug fix in Guile interface: added missing prefix to nlopt-version-major
  etcetera.

NLopt 2.1 (6 July 2010)

* New vector-valued constraint feature; thanks to Dmitrey Kroshko of OpenOpt
  for the suggestion.

* COBYLA now accepts equality constraints.

* Guard against multiple inclusion in nlopt.hpp; thanks to Saul
  Thurrowgood for the suggestion.

NLopt 2.0.2 (17 June 2010)

* Fixed compilation failure in Microsoft Visual Studio, due to
  incorrect usage of __stdcall keyword; thanks to Dave Katz for the
  bug report.

NLopt 2.0.1 (16 June 2010)

* Bug fix in Fortran API (for nlo_get_ functions returning arrays).

* Fixed buggy compilation with MinGW.

NLopt 2.0 (15 June 2010)

* New C API, that works by creating an nlopt_opt "object" and then calling
  functions to set the optimization parameters -- much more extensible
  than the old API (which is preserved for backwards compatibility).
  (Updated Fortran, Matlab, and GNU Octave wrappers as well.)

* C++ nlopt.hpp wrapper around C API, allowing namespaces, object
  constructors/destructors, std::vector<double>, and exceptions
  to be exploited.

* New nlopt wrappers callable from Python and GNU Guile, generated
  with the help of SWIG.

* New 'man nlopt' manual page documenting new API.
